--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./build/index.js",
   "scripts": {
-    "start": "tsc index.ts --outDir \"./build/\" && node \"./build/index.js\"",
+    "start": "tsc ./src/index.ts --outDir \"./build/\" && node \"./build/index.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "AverageAlien",
