Basics of phaser implemented

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
@@ -16,7 +17,8 @@
     ],
     "lib": [
       "es2018",
-      "dom"
+      "dom",
+      "ScriptHost"
     ]
   },
   "angularCompilerOptions": {
