--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~9.0.1",
     "base65536": "^3.0.2",
     "msgpack-lite": "^0.1.26",
+    "pathfinding": "^0.4.18",
     "phaser": "^3.24.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
@@ -37,6 +38,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/msgpack-lite": "^0.1.7",
     "@types/node": "^12.11.1",
+    "@types/pathfinding": "0.0.4",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
