--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~9.0.1",
     "base65536": "^3.0.2",
     "msgpack-lite": "^0.1.26",
+    "ngx-socket-io": "^3.2.0",
     "pathfinding": "^0.4.18",
     "phaser": "^3.24.1",
     "rxjs": "~6.5.4",
