--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,13 @@
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.26",
+    "@types/socket.io": "^2.1.11",
     "@types/ws": "^7.2.6"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "phaser": "^3.24.1",
+    "socket.io": "^2.3.0",
     "ws": "^7.3.1"
   }
 }
