--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,18 @@
     "@types/express": "^4.17.7",
     "@types/node": "^14.0.26",
     "@types/socket.io": "^2.1.11",
+    "@types/uuid": "^8.3.0",
     "@types/ws": "^7.2.6"
   },
   "dependencies": {
+    "@types/pathfinding": "0.0.4",
     "express": "^4.17.1",
+    "pathfinding": "^0.4.18",
     "phaser": "^3.24.1",
+    "rxjs": "^6.6.2",
     "socket.io": "^2.3.0",
+    "tslint": "^6.1.3",
+    "uuid": "^8.3.0",
     "ws": "^7.3.1"
   }
 }
