--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
@@ -16,7 +17,9 @@
     ],
     "lib": [
       "es2018",
-      "dom"
+      "ES2019",
+      "dom",
+      "ScriptHost"
     ]
   },
   "angularCompilerOptions": {
