--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,11 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "./build/index.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "start": "tsc --project tsconfig.json && node \"./build/index.js\"",
+    "start:dev": "nodemon",
+    "start": "tsc && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "AverageAlien",
@@ -15,16 +16,20 @@
     "@types/node": "^14.0.26",
     "@types/socket.io": "^2.1.11",
     "@types/uuid": "^8.3.0",
-    "@types/ws": "^7.2.6"
+    "@types/ws": "^7.2.6",
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7"
   },
   "dependencies": {
+    "@geckos.io/phaser-on-nodejs": "^1.2.3",
     "@types/pathfinding": "0.0.4",
     "express": "^4.17.1",
     "pathfinding": "^0.4.18",
     "phaser": "^3.24.1",
     "rxjs": "^6.6.2",
     "socket.io": "^2.3.0",
-    "tslint": "^6.1.3",
     "uuid": "^8.3.0",
     "ws": "^7.3.1"
   }
