--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "author": "AverageAlien",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.7",
+    "@types/md5": "^2.3.0",
     "@types/node": "^14.0.26",
     "@types/socket.io": "^2.1.11",
     "@types/uuid": "^8.3.0",
@@ -27,7 +29,9 @@
     "@geckos.io/phaser-on-nodejs": "^1.2.3",
     "@types/pathfinding": "0.0.4",
     "canvas": "^2.7.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "md5": "^2.3.0",
     "pathfinding": "^0.4.18",
     "phaser": "^3.24.1",
     "postgresql-client": "^1.16.5",
