--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.7",
+    "@types/express-jwt": "^6.0.1",
     "@types/md5": "^2.3.0",
     "@types/node": "^14.0.26",
     "@types/socket.io": "^2.1.11",
@@ -31,6 +32,7 @@
     "canvas": "^2.7.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "md5": "^2.3.0",
     "pathfinding": "^0.4.18",
     "phaser": "^3.24.1",
