--- a/server/package.json
+++ b/server/package.json
@@ -26,13 +26,13 @@
     "@types/ws": "^7.2.6",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
-    "tslint": "^6.1.3",
-    "typescript": "^3.9.7"
+    "tslint": "^6.1.3"
   },
   "dependencies": {
     "@geckos.io/phaser-on-nodejs": "^1.2.3",
     "@types/pathfinding": "0.0.4",
     "rimraf": "^3.0.2",
+    "typescript": "^3.9.7",
     "canvas": "^2.7.0",
     "cookie": "^0.4.0",
     "cookie-parser": "^1.4.5",
