--- a/client/package.json
+++ b/client/package.json
@@ -29,9 +29,7 @@
     "rxjs": "~6.5.4",
     "serialize-javascript": "^4.0.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
-  },
-  "devDependencies": {
+    "zone.js": "~0.10.2",
     "@angular-devkit/build-angular": "^0.1000.6",
     "@angular/cli": "~9.0.2",
     "@angular/compiler-cli": "~9.0.1",
@@ -53,5 +51,7 @@
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
     "typescript": "~3.7.5"
+  },
+  "devDependencies": {
   }
 }
