--- a/server/package.json
+++ b/server/package.json
@@ -12,28 +12,8 @@
   },
   "author": "AverageAlien",
   "license": "ISC",
-  "devDependencies": {
-  },
   "dependencies": {
     "@geckos.io/phaser-on-nodejs": "^1.2.3",
-    "@types/pathfinding": "0.0.4",
-    "rimraf": "^3.0.2",
-    "typescript": "^3.9.7",
-    "canvas": "^2.7.0",
-    "cookie": "^0.4.0",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-jwt": "^6.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "md5": "^2.3.0",
-    "pathfinding": "^0.4.18",
-    "phaser": "^3.24.1",
-    "postgresql-client": "^1.16.5",
-    "rxjs": "^6.6.2",
-    "socket.io": "^2.3.0",
-    "uuid": "^8.3.0",
-    "ws": "^7.3.1",
     "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
@@ -42,11 +22,30 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/md5": "^2.3.0",
     "@types/node": "^14.0.26",
+    "@types/pathfinding": "0.0.4",
     "@types/socket.io": "^2.1.11",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.2.6",
+    "canvas": "^2.7.0",
+    "concurrently": "^6.2.0",
+    "cookie": "^0.4.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "nodemon": "^2.0.4",
+    "pathfinding": "^0.4.18",
+    "phaser": "^3.24.1",
+    "postgresql-client": "^1.16.5",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.2",
+    "socket.io": "^2.3.0",
     "ts-node": "^8.10.2",
-    "tslint": "^6.1.3"
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7",
+    "uuid": "^8.3.0",
+    "ws": "^7.3.1"
   }
 }
