--- a/client/package.json
+++ b/client/package.json
@@ -11,34 +11,26 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.1000.6",
     "@angular/animations": "~9.0.1",
     "@angular/cdk": "^9.2.4",
+    "@angular/cli": "~9.0.2",
     "@angular/common": "~9.0.1",
     "@angular/compiler": "~9.0.1",
+    "@angular/compiler-cli": "~9.0.1",
     "@angular/core": "~9.0.1",
     "@angular/forms": "~9.0.1",
+    "@angular/language-service": "~9.0.1",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
-    "base65536": "^3.0.2",
-    "msgpack-lite": "^0.1.26",
-    "ngx-socket-io": "^3.2.0",
-    "pathfinding": "^0.4.18",
-    "phaser": "^3.24.1",
-    "rxjs": "~6.5.4",
-    "serialize-javascript": "^4.0.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "@angular-devkit/build-angular": "^0.1000.6",
-    "@angular/cli": "~9.0.2",
-    "@angular/compiler-cli": "~9.0.1",
-    "@angular/language-service": "~9.0.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/msgpack-lite": "^0.1.7",
     "@types/node": "^12.11.1",
     "@types/pathfinding": "0.0.4",
+    "base65536": "^3.0.2",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -47,11 +39,18 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "msgpack-lite": "^0.1.26",
+    "ngx-socket-io": "^3.2.0",
+    "pathfinding": "^0.4.18",
+    "phaser": "^3.24.1",
     "protractor": "~5.4.3",
+    "rxjs": "~6.5.4",
+    "serialize-javascript": "^4.0.0",
     "ts-node": "~8.3.0",
+    "tslib": "^1.10.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.7.5",
+    "zone.js": "~0.10.2"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
