--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "start:dev": "nodemon",
     "start": "npm run build && node build/index.js",
     "start:nobuild": "node build/index.js",
-    "build": "rimraf ./build && tsc",
+    "build": "rimraf ./build && npm run tsc",
+    "tsc": "node node_modules/typescript/bin/tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "AverageAlien",
