--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
     "start:dev": "nodemon",
     "start": "npm run build && node build/index.js",
     "start:nobuild": "node build/index.js",
-    "build": "rimraf ./build && npm run tsc",
-    "tsc": "node node_modules/typescript/bin/tsc",
+    "build": "rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "AverageAlien",
@@ -27,12 +26,12 @@
     "@types/ws": "^7.2.6",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
-    "tslint": "^6.1.3",
-    "typescript": "^3.9.7"
+    "tslint": "^6.1.3"
   },
   "dependencies": {
     "@geckos.io/phaser-on-nodejs": "^1.2.3",
     "@types/pathfinding": "0.0.4",
+    "typescript": "^3.9.7",
     "canvas": "^2.7.0",
     "cookie": "^0.4.0",
     "cookie-parser": "^1.4.5",
