--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
+    "typescript": "~3.7.5",
     "base65536": "^3.0.2",
     "msgpack-lite": "^0.1.26",
     "ngx-socket-io": "^3.2.0",
@@ -53,6 +54,5 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
   }
 }
