--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,6 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
-    "tslint": "~5.18.0",
+    "tslint": "~5.18.0"
   }
 }
