--- a/client/package.json
+++ b/client/package.json
@@ -16,12 +16,16 @@
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.0.1",
     "@angular/compiler": "~9.0.1",
+    "@angular-devkit/build-angular": "^0.1000.6",
+    "@angular/cli": "~9.0.2",
+    "@angular/compiler-cli": "~9.0.1",
     "@angular/core": "~9.0.1",
     "@angular/forms": "~9.0.1",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
+    "typescript": "~3.7.5",
     "base65536": "^3.0.2",
     "msgpack-lite": "^0.1.26",
     "ngx-socket-io": "^3.2.0",
@@ -33,9 +37,6 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.6",
-    "@angular/cli": "~9.0.2",
-    "@angular/compiler-cli": "~9.0.1",
     "@angular/language-service": "~9.0.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -52,7 +53,6 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
-    "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "tslint": "~5.18.0"
   }
 }
