--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,11 @@
   "author": "AverageAlien",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2",
+    "tslint": "^6.1.3"
+  },
+  "dependencies": {
     "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
@@ -24,14 +29,9 @@
     "@types/socket.io": "^2.1.11",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.2.6",
-    "nodemon": "^2.0.4",
-    "ts-node": "^8.10.2",
-    "tslint": "^6.1.3",
-    "typescript": "^3.9.7"
-  },
-  "dependencies": {
     "@geckos.io/phaser-on-nodejs": "^1.2.3",
     "@types/pathfinding": "0.0.4",
+    "typescript": "^3.9.7",
     "canvas": "^2.7.0",
     "cookie": "^0.4.0",
     "cookie-parser": "^1.4.5",
