--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.1000.6",
     "@angular/animations": "~9.0.1",
     "@angular/cdk": "^9.2.4",
+    "@angular/cli": "~9.0.2",
     "@angular/common": "~9.0.1",
     "@angular/compiler": "~9.0.1",
-    "@angular-devkit/build-angular": "^0.1000.6",
-    "@angular/cli": "~9.0.2",
     "@angular/compiler-cli": "~9.0.1",
     "@angular/core": "~9.0.1",
     "@angular/forms": "~9.0.1",
@@ -25,7 +25,6 @@
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
-    "typescript": "~3.7.5",
     "base65536": "^3.0.2",
     "msgpack-lite": "^0.1.26",
     "ngx-socket-io": "^3.2.0",
@@ -34,6 +33,8 @@
     "rxjs": "~6.5.4",
     "serialize-javascript": "^4.0.0",
     "tslib": "^1.10.0",
+    "typescript": "~3.7.5",
+    "uuid": "^3.4.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -43,6 +44,7 @@
     "@types/msgpack-lite": "^0.1.7",
     "@types/node": "^12.11.1",
     "@types/pathfinding": "0.0.4",
+    "@types/uuid": "^8.3.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
