--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,9 @@
     "tslint": "^6.1.3"
   },
   "dependencies": {
+    "@geckos.io/phaser-on-nodejs": "^1.2.3",
+    "@tensorflow/tfjs": "^3.20.0",
+    "@tensorflow/tfjs-node": "^3.20.0",
     "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
@@ -26,12 +29,10 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/md5": "^2.3.0",
     "@types/node": "^14.0.26",
+    "@types/pathfinding": "0.0.4",
     "@types/socket.io": "^2.1.11",
     "@types/uuid": "^8.3.0",
     "@types/ws": "^7.2.6",
-    "@geckos.io/phaser-on-nodejs": "^1.2.3",
-    "@types/pathfinding": "0.0.4",
-    "typescript": "^3.9.7",
     "canvas": "^2.7.0",
     "cookie": "^0.4.0",
     "cookie-parser": "^1.4.5",
@@ -46,6 +47,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.2",
     "socket.io": "^2.3.0",
+    "typescript": "^3.9.7",
     "uuid": "^8.3.0",
     "ws": "^7.3.1"
   }
